# openfhe-network-examples

./: .gitignore  CMakeLists.txt  Installing_gRPC.md  LICENSE  README.md  Release_Notes.md  Running_Examples.md  ToDo.md  driver.py  grpc_files_explained.md
NetworkMaps/: NetworkMap.txt  NetworkMapBroadcast.txt  NetworkMap_nm_controller.txt  NetworkMap_nmdiff.txt  NetworkMap_nmsame.txt  NetworkMap_statisticscompute.txt  NetworkMap_threshnetaborts.txt
benchmarks/: multi_pre_test_singlethread.sh  pre_d.cpp
benchmarks/NetworkMaps/: NetworkMap_threshnetaborts_3p.txt  NetworkMap_threshnetaborts_7p.txt
benchmarks/demoData/: threshnetdemo_input_file_3p_Node1  threshnetdemo_input_file_3p_Node2  threshnetdemo_input_file_3p_Node3  threshnetdemo_input_file_7p_Node1  threshnetdemo_input_file_7p_Node2  threshnetdemo_input_file_7p_Node3  threshnetdemo_input_file_7p_Node4  threshnetdemo_input_file_7p_Node5  threshnetdemo_input_file_7p_Node6  threshnetdemo_input_file_7p_Node7
benchmarks/demos/: demoscript_fhe_aborts_grpc_p2p_taskset_3p.sh  demoscript_fhe_aborts_grpc_p2p_taskset_7p.sh  demoscript_fhe_aborts_grpc_taskset_3p.sh  demoscript_fhe_aborts_grpc_taskset_7p.sh
demoData/: threshnet_input_file_Node1  threshnet_input_file_Node2  threshnet_input_file_Node3  threshnet_input_file_diff_1  threshnet_input_file_same_Node2  threshnetdemo_input_file_Node1  threshnetdemo_input_file_Node2  threshnetdemo_input_file_Node3  threshnetdemo_input_file_Node4  threshnetdemo_input_file_Node5
demoData/accessMaps/: pre_accessmap  pre_accessmap2
demoData/images/: README.md
demoData/keys/: producer_aes_key_P0  producer_aes_key_P1
demoData/routingTables/: broker_2
demos/: demoscript_adjacent_network_measure.sh  demoscript_adjacent_network_measure_diff.sh  demoscript_adjacent_network_measure_same.sh  demoscript_fhe_aborts_grpc_p2p_taskset.sh  demoscript_fhe_aborts_grpc_p2p_tmux.sh  demoscript_fhe_aborts_grpc_taskset.sh  demoscript_fhe_aborts_grpc_tmux.sh  demoscript_p2p_adjacent_network_measure.sh  demoscript_p2p_adjacent_network_measure_controller.sh  demoscript_p2p_adjacent_network_measure_diff.sh  demoscript_p2p_adjacent_network_measure_same.sh  demoscript_p2p_path_measurement.sh  demoscript_p2p_testbroadcast.sh  demoscript_p2p_testnodes.sh  demoscript_pre_grpc.sh  demoscript_pre_grpc_tmux.sh  demoscript_threshnet_grpc_tmux.sh  demoscript_threshnet_grpc_tmux_taskset.sh  demoscript_threshnet_p2p.sh
raven/: README.md
raven/create-openfhe-container/: README.md  bin-base.dockerfile  build-all-containers.sh  build-base.sh  build-examples.sh  builder-base.dockerfile  builder-examples.dockerfile  dependencies.yml  min-base.dockerfile  model.js  move-to-bin-container.sh  move-to-min-container.sh
raven/nm-raven-demo/: README.md  duality_install.sh  duality_install.yml  gen_interpreter.sh  interpreters.yml  model.js  playbook.sh  playbook.yml  run.sh
raven/nm-raven-demo/NetworkMaps/: NetworkMap_nm.txt
raven/nm-raven-demo/files/: add-frr.sh
raven/nm-raven-demo/scripts/: create_certs.sh  create_root_cert.sh
raven/nm-raven-demo/templates/: frr.conf
raven/nm-raven-demo/vars/: hosts.yml
raven/pre-final-raven/: duality_install.sh  duality_install.yml  interpreters.yml  model.js  playbook.yml  run_pre.yml
raven/pre-final-raven/AccessMaps/: pre_accessmap  pre_accessmap_all
raven/pre-final-raven/NetworkMaps/: pre_networkmap
raven/pre-final-raven/files/: daemons  frr_defaults.conf
raven/pre-final-raven/scripts/: stop_docker.sh
raven/pre-final-raven/templates/: hosts.template
raven/pre-final-raven/vars/: hosts.yml
raven/pre-simple-raven/: duality_install.sh  duality_install.yml  interpreters.yml  model.js  playbook.sh  playbook.yml  run.sh  run_pre.sh
raven/pre-simple-raven/AccessMaps/: pre_accessmap  pre_accessmap_all
raven/pre-simple-raven/NetworkMaps/: pre_networkmap  pre_networkmap_onebroker
raven/pre-simple-raven/templates/: frr.conf
raven/pre-simple-raven/vars/: hosts.yml
scripts/: multihop_params.py  multihop_params_helper.py  multiplexer_script.py  stdlatticeparams.py  verify_pre_output.sh
scripts/authentication/: create_all_demo_certs.sh  create_nodes_cert.sh  create_root_cert.sh
scripts/authentication/pre_grpc_demo/: nodes
src/network_measure_examples/: CMakeLists.txt
src/peer_to_peer_framework/: CMakeLists.txt
src/peer_to_peer_framework/include/: node.h  node_client.h  node_request.h  node_server_async_base.h  node_utils.h
src/peer_to_peer_framework/protos/: peer_to_peer.proto
src/peer_to_peer_framework/src/: node_utils.cpp
src/peer_to_peer_framework/targets/: BUILD  testbroadcast.cpp  testnode.cpp
src/pre_grpc_demo/: CMakeLists.txt.orig  README.md.orig
src/thresh_net_aborts/: CMakeLists.txt
src/thresh_net_adjacent_measure/: CMakeLists.txt  common.cmake
src/threshnet_aborts_grpc/: CMakeLists.txt
src/threshnet_adjacent_measure_demo/: config.h.in
src/threshold_fhe_aborts/: CMakeLists.txt  threshold_fhe.cpp  threshold_fhe_aborts.cpp
tests/: README.md  nmap_generator.py
tests/n_party/: CMakeLists.txt  README.md  dbg_mult_of_3_small_nmap.txt  large_nmap.txt  mult_of_3_large_nmap.txt  nmap.txt
tests/n_party/configs/: config_base.yaml  test_broadcast.yaml  test_dropout_receiver.yaml  test_dropout_sender.yaml  test_hammer.yaml  test_large_broadcast_increment.yaml  test_large_cycle_increment.yaml  test_large_two_way_increment.yaml  test_setup.yaml
tests/n_party/targets/: large_broadcast_increment.cpp  large_cycle_increment.cpp  large_two_way_increment.cpp  three_party_test_broadcast.cpp  three_party_test_dropout_receiver.cpp  three_party_test_dropout_sender.cpp  three_party_test_hammer.cpp  three_party_test_setup.cpp
tests/n_party/verifiers/: large_broadcast_increment.py  large_cycle_increment.py  large_two_way_increment.py  three_party_test_broadcast.py  three_party_test_dropout_receiver.py  three_party_test_dropout_sender.py  three_party_test_hammer.py  three_party_test_setup.py
tests/testing_utils/: test_utils.py  testing_classes.py  testing_config_loader.py  testing_runners.py
tests/two_party/: CMakeLists.txt  common.cmake  nmap.txt
(+146 files in other folders)
